[package]
name = "wrapped-sm-for-java"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wsm4j"
crate_type = ["cdylib"]

[dependencies]
jni = "0.19.0"
yarism = { git = "ssh://git@github.com/bytesboy/Yet-Another-Rust-Implementation-Of-SM-Algorithms.git" }